--- a/main.ui
+++ b/main.ui
@@ -21,7 +21,14 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="0">
+    <item row="2" column="2">
+     <widget class="QPushButton" name="search">
+      <property name="text">
+       <string>Сброс поискового результата</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -34,7 +41,7 @@
       </property>
      </spacer>
     </item>
-    <item row="1" column="1">
+    <item row="2" column="1">
      <widget class="QLineEdit" name="toponym_to_find">
       <property name="enabled">
        <bool>false</bool>
@@ -86,14 +93,14 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="2">
-     <widget class="QPushButton" name="search">
+    <item row="4" column="1" colspan="2">
+     <widget class="QLabel" name="ful_path">
       <property name="text">
-       <string>Сброс поискового результата</string>
+       <string/>
       </property>
      </widget>
     </item>
-    <item row="0" column="0" colspan="3">
+    <item row="0" column="0" colspan="2">
      <widget class="QLabel" name="img">
       <property name="tabletTracking">
        <bool>false</bool>
@@ -108,6 +115,19 @@
        <set>Qt::LinksAccessibleByMouse|Qt::TextEditable</set>
       </property>
      </widget>
+    </item>
+    <item row="0" column="2">
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
     </item>
    </layout>
   </widget>
