--- a/main.ui
+++ b/main.ui
@@ -129,6 +129,13 @@
       </property>
      </spacer>
     </item>
+    <item row="3" column="2">
+     <widget class="QCheckBox" name="checkBox">
+      <property name="text">
+       <string>Отображать почтовый индекс</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
